--- a/과제/dropdown-selectbox/style.css
+++ b/과제/dropdown-selectbox/style.css
@@ -6,13 +6,18 @@
     margin: -1px;
     overflow: hidden;
 }
+.txt-ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .cont-dropdown_selectbox {
-    width: 300px;
+    width: 200px;
     margin: 200px auto;
 }
 .cont-dropdown_selectbox .button-dropdown {
-    width: 200px;
-    padding: 12px 13px;
+    width: 100%;
+    padding: 12px 20px 12px 13px;
     margin-bottom: 9px;
     text-align: left;
     
@@ -27,7 +32,7 @@
     background-color: #FFFFFF;
     background-image: url('images/icon-Triangle-down.png');
     background-repeat: no-repeat;
-    background-position: 177px center;
+    background-position: right 13px center;
 }        
 .cont-dropdown_selectbox .button-dropdown.show {
     padding: 11px 13px;
@@ -41,10 +46,6 @@
 }
 .cont-dropdown_selectbox .list-selectbox {
     display: none;
-}
-.cont-dropdown_selectbox .list-selectbox.show {
-    display: block;
-    width: 200px;
     padding: 3px 0;
 
     font-size: 14px;
@@ -55,6 +56,9 @@
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 }
+.cont-dropdown_selectbox .list-selectbox.show {
+    display: block;
+}
 .list-selectbox li {
     padding: 5px 8px;
 }
@@ -62,10 +66,10 @@
     width: 100%;
     padding: 7px 10px;
     text-align: left;
-    /* cursor: url('images/cursor.png'), auto; */
     background-color: #FFFFFF;
     border-radius: 8px;
 }
+.list-selectbox button:focus,    
 .list-selectbox button:hover {
     background-color: #F8E4FF;
 }
