--- a/수업내용/Day20/001_주석과_nesting.css
+++ b/수업내용/Day20/001_주석과_nesting.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* 여러 줄 주석입니다. */
+/* 두 줄 주석입니다. */
 ul li {
   color: red;
   font-size: 10px;
@@ -18,6 +18,18 @@ ul li {
 }
 
 .one .two .four {
+  color: black;
+}
+
+.two_ {
+  color: green;
+}
+
+.two_ .three_ {
+  color: blue;
+}
+
+.two_ .four_ {
   color: black;
 }
 /*# sourceMappingURL=001_주석과_nesting.css.map */
