--- a/과제/calendar/calendar.css
+++ b/과제/calendar/calendar.css
@@ -1,32 +1,37 @@
-p{
-    margin: 0 20px;
-    padding: 0;
+body {
+    background-color: white;
+}
+table {
+    margin: 0 auto;
 }
 .year {
-    display: flex;
+    /* display: block; */
+    padding: 25px;
 }
 .year-text{
-    flex: 1;
     color: brown;
     font-size: 120px;
     font-weight: bolder;
-    text-align: left;
+    float: left;
 }
 .text{
-    flex: 1;
-    padding-top: 90px;
     color: gray;
     font-weight: bold;
-    text-align: right;
+    float: right;
+    /* padding-top: 50px; */
+    margin-top: 80px;
 }
 .box{
     display: inline-block;
     height: 250px;
     margin: 0 20px;
+    font-weight: bold;
 }
 .month{
     font-size: 30px;
     font-weight: bold;
+    line-height: 40px;
+    padding: 10px;
 }
 .day {
     width: 40px;
@@ -34,6 +39,11 @@ p{
 .SUN, .holiday{
     color: red;
 }
-td{
+td, th{
     text-align: center;
+    padding: 5px;
+}
+
+td:not(.box):hover {
+    background-color: lightblue;
 }
